# delen

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  go.mod  go.sum  handlers.go  justfile  main.go  main2.go  middleware.go  sqlboiler.toml  sqlc.yaml  sqlx-data.json  templates.go  test.sql
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
db/: items.sql.go  models.go
db/migrations/: 000001_initial_schema.up.sql  20211222222950_create_item.sql
db/query/: items.sql
migrations/: 20220105172347_create-item.up.sql  20220327011511_add_items.sql  20220327011511_add_users.sql  20220329204838_require_contents_and_mimetype.sql  20220329212953_require_id.sql
migrations/2022-03-31-044457_create_item_table/: up.sql
models/: boil_suites_test.go  boil_table_names.go  goose_db_version.go  goose_db_version_test.go  items.go  items_test.go  sqlite3_suites_test.go  users.go  users_test.go
src/: db.rs  error.rs  main.rs  models.rs  schema.rs
src/db/: item.rs  mod.rs
src/fairings/: mod.rs
src/routes/: base.rs
templates/: base.html  error.html  index.html  index.html.tera  upload.html.tmpl
templates/section/: items.html  upload-result.html  upload.html
