[package]
name = "dalen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
sqlx = { version = "0.5.10", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "migrate",
  "chrono",
  "offline",
] }
tokio = { version = "1.15.0", features = ["full"] }
