[package]
name = "delen"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
